src/reader/entry/tests/error/component.sibs
#[app ./app]
#[client,: ./client/with spaces in name]
#[shared=: ./shared/one/to]
#[defaults;]
#[wrong^name]
#[wrong$name]
#[wrong&name]
#[wrong*name]
#[wrong@name]
#[wrong(name]
#[wrong)name]
#[wrong{name]
#[wrong}name]
#[wrong/name]
#[wrong#name]